--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -531,6 +531,7 @@ section {
 --------------------------------------------------------------*/
 
 .about .content h3 {
+    padding: 0px;
     font-weight: 700;
     font-size: 28px;
     font-family: "Poppins", sans-serif;
@@ -643,8 +644,10 @@ section {
 }
 
 .services .icon-box {
+    height: 350px;
+    width: 350px;
     text-align: center;
-    border: 1px solid #ebebeb;
+    border: 4px solid #ebebeb;
     padding: 80px 20px;
     transition: all ease-in-out 0.3s;
     background-color: darkgrey;
