--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: darkgrey;
     font-family: "Open Sans", sans-serif;
-    color: #444444;
+    color: #ffffff;
 }
 
 a {
