--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1265,7 +1265,7 @@ section {
 
 .breadcrumbs {
     padding: 15px 0;
-    background: whitesmoke;
+    background: grey;
     min-height: 40px;
     margin-top: 74px;
 }
